# clavis-js

./: .gitignore  .npmignore  .npmrc  LICENSE  README.md  package.json  tsconfig.json
examples/: client.ts  packets.ts  server.ts
src/: bincode-helpers.ts  bincode.ts  client.ts  crypto.ts  error.ts  handshake.ts  index.ts  protocol.ts  stream.ts
tests/cross-lang/: bidirectional.test.ts  js-client-rust-server.test.ts  rust-client-js-server.test.ts
tests/helpers/: test-client.ts  test-protocol.ts  test-server.ts  test-utils.ts
tests/rust-binaries/: Cargo.toml
tests/rust-binaries/test-client/src/: main.rs
tests/rust-binaries/test-server/src/: main.rs
tests/same-lang/: bincode.test.ts  crypto.test.ts  handshake.test.ts  integration.test.ts  protocol.test.ts  stream.test.ts
